Fix scrollbar in home page

--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -123,3 +123,7 @@ a:disabled{
   background-color: #A2003E;
   *background-color: #A2003E;
 }
+
+.col-lg-12 {
+  max-width: 100%;
+}
